--- a/foundation/index.html
+++ b/foundation/index.html
@@ -9,7 +9,7 @@
 <body>
 <div id="body" class="container">
 	<h1 class="">CSS Framework Template</h1>
-	<p>10 Frameworks in 10 Minutes...each</p>
+	<p>5 Frameworks in 55 Minutes</p>
 	<nav class="navbar">
 		<ul class="">
 			<li class=""><a href="#" class="">Link to Framework</a></li>
